# apps/web/pages/api/units/[id]/assets.js
@@ -1,0 +1,5 @@
+import { proxyToBackend } from "../../../../lib/proxy";
+
+export default async function handler(req, res) {
+  await proxyToBackend(req, res, `/units/${req.query.id}/assets`);
+}
